--- a/index.html
+++ b/index.html
@@ -11,113 +11,144 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+		integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="./css/index.css">
 </head>
 
-<!--Шапка сайта-->
-<header class="header">
-	<nav class="header-nav">
-		<a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
-		<ul class="header-list">
-			<li class="header-item list"><a class="header-link link" href="./index.html">Студія</a></li>
-			<li class="header-item list"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
-			<li class="header-item list"><a class="header-link link" href="#">Контакти</a></li>
-		</ul>
-	</nav>
+<body>
 
-	<ul class="adress-nav">
-		<li class="list"><a href="mailto:info@devstudio.com" class="adress-link link">info@devstudio.com</a></li>
-		<li class="list"><a href="tel:+380961111111" class="adress-link link">+38 096 111 11 11</a></li>
-	</ul>
-</header>
+	<!--Шапка сайта-->
+	<header class="header">
+		<div class="header-wrapper container">
+			<nav class="header-nav">
+				<a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
+				<ul class="header-list list">
+					<li class="header-item"><a class="header-link link" href="./index.html">Студія</a></li>
+					<li class="header-item"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
+					<li class="header-item"><a class="header-link link" href="#">Контакти</a></li>
+				</ul>
+			</nav>
 
-<!--Главная часть-->
-<main>
-	<!--  Hero -->
-	<section class="hero">
-		<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-		<button type="button" class="hero-btn">Замовити послугу</button>
-	</section>
+			<ul class="adress-nav list">
+				<li class="adress-item"><a href="mailto:info@devstudio.com"
+						class="adress-link link">info@devstudio.com</a>
+				</li>
+				<li class="adress-item"><a href="tel:+380961111111" class="adress-link link">+38 096 111 11 11</a></li>
+			</ul>
+		</div>
+	</header>
 
-	<!-- Что нам важно -->
-	<section class="section">
-		<h2 class="section-title visually-hidden">Нашi переваги</h2>
-		<ul class="significant">
-			<li class="significant-list list">
-				<h3 class="significant-title">Увага до деталей</h3>
-				<p class="sign-subtxt">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-			</li>
-			<li class="significant-list list">
-				<h3 class="significant-title">Пунктуальнiсть</h3>
-				<p class="sign-subtxt">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-			</li>
-			<li class="significant-list list">
-				<h3 class="significant-title">Планування</h3>
-				<p class="sign-subtxt">Так само консультація з широким активом значною мірою зумовлює.</p>
-			</li>
-			<li class="significant-list list">
-				<h3 class="significant-title">Сучаснi технологiї</h3>
-				<p class="sign-subtxt">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-			</li>
-		</ul>
-	</section>
+	<!--Главная часть-->
+	<main>
+		<!--  Hero -->
+		<section class="hero">
+			<div class="hero-wrapper container">
+				<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+				<button type="button" class="hero-btn">Замовити послугу</button>
+			</div>
+		</section>
 
-	<!-- Чем занимаемся -->
-	<section class="section">
-		<h2 class="section-title">Чим ми займаємося</h2>
-		<ul>
-			<li class="list"><img src="./img/w-w-d-1.jpg" alt="пишемо код" width="370"></li>
-			<li class="list"><img src="./img/w-w-d-2.jpg" alt="читаемо код" width="370"></li>
-			<li class="list"><img src="./img/w-w-d-3.jpg" alt="аналiтика" width="370"></li>
-		</ul>
-	</section>
+		<!-- Что нам важно -->
+		<section class="section">
+			<div class="container">
+				<h2 class="section-title visually-hidden">Нашi переваги</h2>
+				<ul class="significant list">
+					<li class="significant-list">
+						<h3 class="significant-title">Увага до деталей</h3>
+						<p class="sign-subtxt">Ідейні міркування, і навіть початок повсякденної роботи з формування
+							позиції.
+						</p>
+					</li>
+					<li class="significant-list">
+						<h3 class="significant-title">Пунктуальнiсть</h3>
+						<p class="sign-subtxt">Завдання організації, особливо рамки і місце навчання кадрів тягне у
+							себе.
+						</p>
+					</li>
+					<li class="significant-list">
+						<h3 class="significant-title">Планування</h3>
+						<p class="sign-subtxt">Так само консультація з широким активом значною мірою зумовлює.</p>
+					</li>
+					<li class="significant-list">
+						<h3 class="significant-title">Сучаснi технологiї</h3>
+						<p class="sign-subtxt">Значимість цих проблем настільки очевидна, що реалізація планових
+							завдань.
+						</p>
+					</li>
+				</ul>
+			</div>
+		</section>
 
-	<!-- Наша команда -->
-	<section class="team section">
-		<h2 class="section-title">Наша команда</h2>
+		<!-- Чем занимаемся -->
+		<section class="section made">
+			<div class="container">
+				<h2 class="section-title">Чим ми займаємося</h2>
+				<ul class="made-list list">
+					<li class="made-item"><img src="./img/w-w-d-1.jpg" alt="пишемо код" width="370"></li>
+					<li class="made-item"><img src="./img/w-w-d-2.jpg" alt="читаемо код" width="370"></li>
+					<li class="made-item"><img src="./img/w-w-d-3.jpg" alt="аналiтика" width="370"></li>
+				</ul>
+			</div>
+		</section>
 
-		<ul class="team-list">
-			<li class="team-item list">
-				<img src="./img/igord.jpg" alt="Ігор Дем'яненко" width="270">
-				<h3 class="team-title">Ігор Дем'яненко</h3>
-				<p class="team-subtxt">Product Designer</p>
-			</li>
-			<li class="team-item list">
-				<img src="./img/olgar.jpg" alt="Ольга Рєпіна" width="270">
-				<h3 class="team-title">Ольга Рєпіна</h3>
-				<p class="team-subtxt">Frontend Developer</p>
-			</li>
-			<li class="team-item list">
-				<img src="./img/mukolat.jpg" alt="Микола Тарасов" width="270">
-				<h3 class="team-title">Микола Тарасов</h3>
-				<p class="team-subtxt">Marketing</p>
-			</li>
-			<li class="team-item list">
-				<img src="./img/misha.jpg" alt="Михайло Єрмаков" width="270">
-				<h3 class="team-title">Михайло Єрмаков</h3>
-				<p class="team-subtxt">UI Designer</p>
-			</li>
-		</ul>
-	</section>
-</main>
+		<!-- Наша команда -->
+		<section class="team section">
+			<div class="container team">
+				<h2 class="section-title">Наша команда</h2>
+				<div class="wrapper-item">
+					<ul class="team-list list">
+						<li class="team-item">
+							<img src="./img/igord.jpg" alt="Ігор Дем'яненко" width="270" class="team-img">
+							<h3 class="team-title">Ігор Дем'яненко</h3>
+							<p class="team-subtxt">Product Designer</p>
+						</li>
 
-<!--Подвал-->
-<footer class="footer">
-	<a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
-	<!-- Адрес -->
-	<address>
-		<ul class="footer-list">
-			<li class="list"><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank"
-					rel="noopener noreferrer nofollow" class="footer-item link">м.
-					Київ,
-					пр-т Лесі Українки, 26</a></li>
-			<li class="list"><a href="mailto:info@devstudio.com" class="footer-item contakt link">info@devstudio.com</a>
-			</li>
-			<li class="list"><a href="tel:+380961111111" class="footer-item contakt link">+38 096 111 11 11</a>
-			</li>
-		</ul>
-	</address>
-</footer>
+						<li class="team-item">
+							<img src="./img/olgar.jpg" alt="Ольга Рєпіна" width="270" class="team-img">
+							<h3 class="team-title">Ольга Рєпіна</h3>
+							<p class="team-subtxt">Frontend Developer</p>
+						</li>
+
+						<li class="team-item">
+							<img src="./img/mukolat.jpg" alt="Микола Тарасов" width="270" class="team-img">
+							<h3 class="team-title">Микола Тарасов</h3>
+							<p class="team-subtxt">Marketing</p>
+						</li>
+
+						<li class="team-item">
+							<img src="./img/misha.jpg" alt="Михайло Єрмаков" width="270" class="team-img">
+							<h3 class="team-title">Михайло Єрмаков</h3>
+							<p class="team-subtxt">UI Designer</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+	</main>
+
+	<!--Подвал-->
+	<footer class="footer">
+		<div class="container">
+			<a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
+			<!-- Адрес -->
+			<address>
+				<ul class="footer-list list">
+					<li class="footer-item"><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank"
+							rel="noopener noreferrer nofollow" class="footer-link link">м.
+							Київ,
+							пр-т Лесі Українки, 26</a></li>
+					<li class="footer-item"><a href="mailto:info@devstudio.com"
+							class="footer-link contakt link">info@devstudio.com</a>
+					</li>
+					<li class="footer-item"><a href="tel:+380961111111" class="footer-link contakt link">+38 096 111 11
+							11</a>
+					</li>
+				</ul>
+			</address>
+		</div>
+	</footer>
 
 </body>
 
