--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
@@ -18,103 +21,108 @@
 
     <!----------------- Header ----------------->
     <header class="header">
-        <nav class="header-nav">
-            <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
-            <ul class="header-list">
-                <li class="header-item list"><a class="header-link link" href="./index.html">Студія</a></li>
-                <li class="header-item list"><a class="header-link link current" href="./portfolio.html">Портфоліо</a>
-                </li>
-                <li class="header-item list"><a class="header-link link" href="#">Контакти</a></li>
-            </ul>
-        </nav>
+        <div class="header-wrapper container">
+            <nav class="header-nav">
+                <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
+                <ul class="header-list list">
+                    <li class="header-item"><a class="header-link link" href="./index.html">Студія</a></li>
+                    <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="header-item"><a class="header-link link" href="#">Контакти</a></li>
+                </ul>
+            </nav>
 
-        <ul class="adress-nav">
-            <li class="list"><a href="mailto:info@devstudio.com" class="adress-link link">info@devstudio.com</a></li>
-            <li class="list"><a href="tel:+380961111111" class="adress-link link">+38 096 111 11 11</a></li>
-        </ul>
+            <ul class="adress-nav list">
+                <li class="adress-item"><a href="mailto:info@devstudio.com"
+                        class="adress-link link">info@devstudio.com</a>
+                </li>
+                <li class="adress-item"><a href="tel:+380961111111" class="adress-link link">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
     </header>
 
     <!----------------- Главная секция ----------------->
 
     <main>
         <section class="portfolio">
-            <h1 class="portfolio-txt visually-hidden">Портфолiо</h1>
-            <!-- Главная страница -->
-            <ul class="btn-group">
-                <li class="list"><button type="button" class="btn">Усі</button></li>
-                <li class="list"><button type="button" class="btn">Веб-сайти</button></li>
-                <li class="list"><button type="button" class="btn">Додатки</button></li>
-                <li class="list"><button type="button" class="btn">Дизайн</button></li>
-                <li class="list"><button type="button" class="btn">Маркетинг</button></li>
-            </ul>
+            <div class="container">
+                <h1 class="portfolio-txt visually-hidden">Портфолiо</h1>
+                <!-- Главная страница -->
+                <ul class="btn-group list">
+                    <li class=""><button type="button" class="btn">Усі</button></li>
+                    <li class="list"><button type="button" class="btn">Веб-сайти</button></li>
+                    <li class="list"><button type="button" class="btn">Додатки</button></li>
+                    <li class="list"><button type="button" class="btn">Дизайн</button></li>
+                    <li class="list"><button type="button" class="btn">Маркетинг</button></li>
+                </ul>
 
-            <!----------------- Вариант с ссылками ----------------->
+                <!----------------- Вариант с ссылками ----------------->
 
-            <ul class="portfolio-cards">
-                <li class="portfolio-list list">
-                    <a href="#" class="link">
-                        <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
-                        <h2 class="portfolio-txt">Технокряк</h2>
-                        <p class="portfolio-subtxt">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="portfolio-list list">
-                    <a href="#" class="link">
-                        <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
-                        <h2 class="portfolio-txt">Постер New Orlean vs Golden Star</h2>
-                        <p class="portfolio-subtxt">Дизайн </p>
-                    </a>
-                </li>
-                <li class="portfolio-list list">
-                    <a href="#" class="link">
-                        <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
-                        <h2 class="portfolio-txt">Ресторан Seafood</h2>
-                        <p class="portfolio-subtxt">Додаток</p>
-                    </a>
-                </li>
-                <li class="portfolio-list list">
-                    <a href="#" class="link">
-                        <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
-                        <h2 class="portfolio-txt">Проєкт Prime</h2>
-                        <p class="portfolio-subtxt">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="portfolio-list list">
-                    <a href="#" class="link">
-                        <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
-                        <h2 class="portfolio-txt">Проєкт Boxes</h2>
-                        <p class="portfolio-subtxt">Додаток</p>
-                    </a>
-                </li>
-                <li class="portfolio-list list">
-                    <a href="#" class="link">
-                        <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
-                        <h2 class="portfolio-txt">Inspiration has no Borders</h2>
-                        <p class="portfolio-subtxt">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="portfolio-list list">
-                    <a href="#" class="link">
-                        <img src="./img/hw2/book.jpg" alt="opened book" width="370">
-                        <h2 class="portfolio-txt">Видання Limited Edition</h2>
-                        <p class="portfolio-subtxt">Дизайн</p>
-                    </a>
-                </li>
-                <li class="portfolio-list list">
-                    <a href="#" class="link">
-                        <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
-                        <h2 class="portfolio-txt">Проєкт LAB</h2>
-                        <p class="portfolio-subtxt">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="portfolio-list list">
-                    <a href="#" class="link">
-                        <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
-                        <h2 class="portfolio-txt">Growing Business</h2>
-                        <p class="portfolio-subtxt">Додаток</p>
-                    </a>
-                </li>
-            </ul>
+                <ul class="portfolio-cards  list">
+                    <li class="portfolio-list">
+                        <a href="#" class="link">
+                            <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
+                            <h2 class="portfolio-txt">Технокряк</h2>
+                            <p class="portfolio-subtxt">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="portfolio-list">
+                        <a href="#" class="link">
+                            <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
+                            <h2 class="portfolio-txt">Постер New Orlean vs Golden Star</h2>
+                            <p class="portfolio-subtxt">Дизайн </p>
+                        </a>
+                    </li>
+                    <li class="portfolio-list">
+                        <a href="#" class="link">
+                            <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
+                            <h2 class="portfolio-txt">Ресторан Seafood</h2>
+                            <p class="portfolio-subtxt">Додаток</p>
+                        </a>
+                    </li>
+                    <li class="portfolio-list">
+                        <a href="#" class="link">
+                            <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
+                            <h2 class="portfolio-txt">Проєкт Prime</h2>
+                            <p class="portfolio-subtxt">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="portfolio-list">
+                        <a href="#" class="link">
+                            <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
+                            <h2 class="portfolio-txt">Проєкт Boxes</h2>
+                            <p class="portfolio-subtxt">Додаток</p>
+                        </a>
+                    </li>
+                    <li class="portfolio-list">
+                        <a href="#" class="link">
+                            <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
+                            <h2 class="portfolio-txt">Inspiration has no Borders</h2>
+                            <p class="portfolio-subtxt">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li class="portfolio-list">
+                        <a href="#" class="link">
+                            <img src="./img/hw2/book.jpg" alt="opened book" width="370">
+                            <h2 class="portfolio-txt">Видання Limited Edition</h2>
+                            <p class="portfolio-subtxt">Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="portfolio-list">
+                        <a href="#" class="link">
+                            <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
+                            <h2 class="portfolio-txt">Проєкт LAB</h2>
+                            <p class="portfolio-subtxt">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="portfolio-list">
+                        <a href="#" class="link">
+                            <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
+                            <h2 class="portfolio-txt">Growing Business</h2>
+                            <p class="portfolio-subtxt">Додаток</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
@@ -122,22 +130,26 @@
     <!----------------- Footer ----------------->
 
     <footer class="footer">
-        <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
-        <!----------------- Адрес ----------------->
-        <address>
-            <ul class="footer-list">
-                <li class="list"><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank"
-                        rel="noopener noreferrer nofollow" class="footer-item link">м.
-                        Київ,
-                        пр-т Лесі Українки, 26</a></li>
-                <li class="list"><a href="mailto:info@devstudio.com"
-                        class="footer-item contakt link">info@devstudio.com</a>
-                </li>
-                <li class="list"><a href="tel:+380961111111" class="footer-item contakt link">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
+            <!-- Адрес -->
+            <address>
+                <ul class="footer-list list">
+                    <li class="footer-item"><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank"
+                            rel="noopener noreferrer nofollow" class="footer-link link">м.
+                            Київ,
+                            пр-т Лесі Українки, 26</a></li>
+                    <li class="footer-item"><a href="mailto:info@devstudio.com"
+                            class="footer-link contakt link">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-item"><a href="tel:+380961111111" class="footer-link contakt link">+38 096 111 11
+                            11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
+
 
 </body>
 
