--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,8 @@
                 <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-item"><a class="header-link link" href="./index.html">Студія</a></li>
-                    <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="header-item"><a class="header-link link current" href="./portfolio.html">Портфоліо</a>
+                    </li>
                     <li class="header-item"><a class="header-link link" href="#">Контакти</a></li>
                 </ul>
             </nav>
@@ -48,80 +49,118 @@
                 <h1 class="portfolio-txt visually-hidden">Портфолiо</h1>
                 <!-- Главная страница -->
                 <ul class="btn-group list">
-                    <li class=""><button type="button" class="btn">Усі</button></li>
-                    <li class="list"><button type="button" class="btn">Веб-сайти</button></li>
-                    <li class="list"><button type="button" class="btn">Додатки</button></li>
-                    <li class="list"><button type="button" class="btn">Дизайн</button></li>
-                    <li class="list"><button type="button" class="btn">Маркетинг</button></li>
+                    <li class="btn-list"><button type="button" class="btn">Усі</button></li>
+                    <li class="btn-list"><button type="button" class="btn">Веб-сайти</button></li>
+                    <li class="btn-list"><button type="button" class="btn">Додатки</button></li>
+                    <li class="btn-list"><button type="button" class="btn">Дизайн</button></li>
+                    <li class=""><button type="button" class="btn">Маркетинг</button></li>
                 </ul>
 
                 <!----------------- Вариант с ссылками ----------------->
 
-                <ul class="portfolio-cards  list">
-                    <li class="portfolio-list">
-                        <a href="#" class="link">
-                            <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
-                            <h2 class="portfolio-txt">Технокряк</h2>
-                            <p class="portfolio-subtxt">Веб-сайт</p>
-                        </a>
-                    </li>
-                    <li class="portfolio-list">
-                        <a href="#" class="link">
-                            <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
-                            <h2 class="portfolio-txt">Постер New Orlean vs Golden Star</h2>
-                            <p class="portfolio-subtxt">Дизайн </p>
-                        </a>
-                    </li>
-                    <li class="portfolio-list">
-                        <a href="#" class="link">
-                            <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
-                            <h2 class="portfolio-txt">Ресторан Seafood</h2>
-                            <p class="portfolio-subtxt">Додаток</p>
-                        </a>
-                    </li>
-                    <li class="portfolio-list">
-                        <a href="#" class="link">
-                            <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
-                            <h2 class="portfolio-txt">Проєкт Prime</h2>
-                            <p class="portfolio-subtxt">Маркетинг</p>
-                        </a>
-                    </li>
-                    <li class="portfolio-list">
-                        <a href="#" class="link">
-                            <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
-                            <h2 class="portfolio-txt">Проєкт Boxes</h2>
-                            <p class="portfolio-subtxt">Додаток</p>
-                        </a>
-                    </li>
-                    <li class="portfolio-list">
-                        <a href="#" class="link">
-                            <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
-                            <h2 class="portfolio-txt">Inspiration has no Borders</h2>
-                            <p class="portfolio-subtxt">Веб-сайт</p>
-                        </a>
-                    </li>
-                    <li class="portfolio-list">
-                        <a href="#" class="link">
-                            <img src="./img/hw2/book.jpg" alt="opened book" width="370">
-                            <h2 class="portfolio-txt">Видання Limited Edition</h2>
-                            <p class="portfolio-subtxt">Дизайн</p>
-                        </a>
-                    </li>
-                    <li class="portfolio-list">
-                        <a href="#" class="link">
-                            <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
-                            <h2 class="portfolio-txt">Проєкт LAB</h2>
-                            <p class="portfolio-subtxt">Маркетинг</p>
-                        </a>
-                    </li>
-                    <li class="portfolio-list">
-                        <a href="#" class="link">
-                            <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
-                            <h2 class="portfolio-txt">Growing Business</h2>
-                            <p class="portfolio-subtxt">Додаток</p>
-                        </a>
-                    </li>
-                </ul>
+                <div class="container portfolio-div">
+                    <ul class="portfolio-cards  list">
+                        <li class="portfolio-list">
+                            <a href="#" class="link">
+                                <div class="img-thumb">
+                                    <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
+                                </div>
+                                <div class="portfolio-content">
+                                    <h2 class="portfolio-txt">Технокряк</h2>
+                                    <p class="portfolio-subtxt">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-list">
+                            <a href="#" class="link">
+                                <div class="img-thumb">
+                                    <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
+                                </div>
+                                <div class="portfolio-content">
+                                    <h2 class="portfolio-txt">Постер New Orlean vs Golden Star</h2>
+                                    <p class="portfolio-subtxt">Дизайн </p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-list">
+                            <a href="#" class="link">
+                                <div class="img-thumb">
+                                    <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
+                                </div>
+                                <div class="portfolio-content">
+                                    <h2 class="portfolio-txt">Ресторан Seafood</h2>
+                                    <p class="portfolio-subtxt">Додаток</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-list">
+                            <a href="#" class="link">
+                                <div class="img-thumb">
+                                    <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
+                                </div>
+                                <div class="portfolio-content">
+                                    <h2 class="portfolio-txt">Проєкт Prime</h2>
+                                    <p class="portfolio-subtxt">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-list">
+                            <a href="#" class="link">
+                                <div class="img-thumb">
+                                    <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
+                                </div>
+                                <div class="portfolio-content">
+                                    <h2 class="portfolio-txt">Проєкт Boxes</h2>
+                                    <p class="portfolio-subtxt">Додаток</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-list">
+                            <a href="#" class="link">
+                                <div class="img-thumb">
+                                    <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
+                                </div>
+                                <div class="portfolio-content">
+                                    <h2 class="portfolio-txt">Inspiration has no Borders</h2>
+                                    <p class="portfolio-subtxt">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-list">
+                            <a href="#" class="link">
+                                <div class="img-thumb">
+                                    <img src="./img/hw2/book.jpg" alt="opened book" width="370">
+                                </div>
+                                <div class="portfolio-content">
+                                    <h2 class="portfolio-txt">Видання Limited Edition</h2>
+                                    <p class="portfolio-subtxt">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-list">
+                            <a href="#" class="link">
+                                <div class="img-thumb">
+                                    <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
+                                </div>
+                                <div class="portfolio-content">
+                                    <h2 class="portfolio-txt">Проєкт LAB</h2>
+                                    <p class="portfolio-subtxt">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="portfolio-list">
+                            <a href="#" class="link">
+                                <div class="img-thumb">
+                                    <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
+                                </div>
+                                <div class="portfolio-content">
+                                    <h2 class="portfolio-txt">Growing Business</h2>
+                                    <p class="portfolio-subtxt">Додаток</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
 
